Primary Color Changes

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,6 +1,6 @@
 .main-button {
-  background-color: #55198b;
-  border: solid 1px #55198b;
+  background-color: #FF9900;
+  border: solid 1px #FF9900;
   color: white;
   font-weight: 700;
   width: max-content;
