--- a/src/components/blogCard/BlogCard.css
+++ b/src/components/blogCard/BlogCard.css
@@ -54,7 +54,7 @@
 }
 
 .button {
-  background-color: #a066fb;
+  background-color: #FF9900;
   color: white;
   width: 90px;
   padding: 10px 18px;
