--- a/src/components/talkCard/TalkCard.css
+++ b/src/components/talkCard/TalkCard.css
@@ -1,6 +1,8 @@
   .container {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-gap: 1rem 1rem;
+    gap: 1rem 1rem;
   }
   
   /* Rectangle Card Layout */
@@ -31,7 +33,7 @@
     margin: auto;
     text-align: left;
     margin-top: 25px;
-    padding: 0px 0px 40px 30px;
+    padding: 45px 0px 40px 30px;
     font-size: 30px;
     line-height: normal;
     overflow: hidden;
@@ -53,7 +55,7 @@
     -webkit-box-orient: vertical;
   }
   .talk-button {
-    background-color: #a066fb;
+    background-color: #FF9900;
     color: white;
     width: 90px;
     padding: 10px 18px;
